--- a/Prototype0/app/src/main/AndroidManifest.xml
+++ b/Prototype0/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".HealthPage"></activity>
+        <activity android:name=".RestroomPage"></activity>
+        <activity android:name=".BusPage" />
+        <activity android:name=".FoodPage" />
+        <activity android:name=".HealthPage" />
         <activity android:name=".Main2Activity" />
         <activity
             android:name=".MainActivity"
